# cwl-loader

./: .gitignore  404.html  CHANGELOG.md  README.md  Taskfile.yaml  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: docs.yaml  package.yaml
api/latest/cwl_loader/: index.html
api/latest/cwl_loader/cli/: index.html
api/latest/cwl_loader/sort/: index.html
api/latest/cwl_loader/utils/: index.html
docs/: examples.ipynb  index.md
docs/explanation/: index.md  loading-model.md
docs/how-to/: bundle-a-workflow.md  index.md  load-and-dump.md
docs/reference/: cli.md  index.md
docs/tutorials/: first-steps.md  index.md
examples/: index.html
explanation/: index.html
explanation/loading-model/: index.html
how-to/: index.html
how-to/bundle-a-workflow/: index.html
how-to/load-and-dump/: index.html
reference/: index.html
reference/cli/: index.html
search/: search_index.json
src/cwl_loader/: __about__.py  __init__.py  cli.py  sort.py  utils.py
tests/: test_custom_requirements.py  test_dereference_steps_unit.py  test_loading.py  test_metadata_unit.py  test_sort_unit.py  test_utils_unit.py
tests/data/: rio-color.cwl  rio-stack.cwl  rio-warp-stack.cwl  stac.cwl  workflow.cwl  workflow_oci.cwl
tutorials/: index.html
tutorials/first-steps/: index.html
